# fieldwork

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docs.md
.cargo/: config.toml
.github/workflows/: ci.yaml  conventional.yml  docs.yml
docs/: configuration.md  deprecate.md  enums.md  get.md  get_mut.md  into.md  into_field.md  option_set_some.md  set.md  take.md  with.md  without.md
docs-gen/: Cargo.toml
docs-gen/src/: main.rs
docs/get/: copy.md  deref.md  option_borrow_inner.md  rename_predicates.md
docs/set/: chain.md
examples/: debug.rs  example.rs
fieldwork-derive/: CHANGELOG.md  Cargo.toml
fieldwork-derive/src/: common_settings.rs  copy_detection.rs  coverage_tests.rs  deprecation.rs  deref_handling.rs  enum.rs  field.rs  field_attributes.rs  field_method_attributes.rs  item_attributes.rs  item_method_attributes.rs  lib.rs  method.rs  query.rs  resolved.rs  struct.rs  struct_method_attributes.rs  variant_attributes.rs
fieldwork-derive/src/resolved/: into_field.rs  mod.rs  take.rs  with.rs
fieldwork-derive/src/resolved/enum/: get.rs  get_mut.rs  into_field.rs  set.rs  take.rs  with.rs  without.rs
fieldwork-derive/src/resolved/struct/: get.rs  get_mut.rs  into_field.rs  mod.rs  set.rs  take.rs  with.rs  without.rs
src/: common_settings.rs  copy_detection.rs  coverage_tests.rs  deref_handling.rs  errors.rs  field.rs  field_attributes.rs  field_method.rs  field_method_attributes.rs  lib.rs  method.rs  option_handling.rs  query.rs  resolved.rs  struct.rs  struct_attributes.rs  struct_method.rs  struct_method_attributes.rs
src/resolved/: get.rs  get_mut.rs  set.rs  with.rs  without.rs
tests/: test.rs
tests/expand/: 01-basic.expanded.rs  01-basic.rs  02-only-set-and-get.expanded.rs  02-only-set-and-get.rs  03-skipping.expanded.rs  03-skipping.rs  04-renaming.expanded.rs  04-renaming.rs  05-template.expanded.rs  05-template.rs  06-docs.expanded.rs  06-docs.rs  07-bounds.expanded.rs  08-arg-name.expanded.rs  08-arg-name.rs  09-vis-override.expanded.rs  09-vis-override.rs  10-opt-in.expanded.rs  10-opt-in.rs  11-copy.expanded.rs  11-copy.rs  12-non-chain-set.expanded.rs  12-non-chain-set.rs  13-deref.expanded.rs  13-deref.rs  14-option-detection.expanded.rs  14-option-detection.rs  15-auto-deref.expanded.rs  15-auto-deref.rs  16-option-set-some.expanded.rs  16-predicate-renaming.expanded.rs  16-predicate-renaming.rs  17-option-set-some.expanded.rs  17-option-set-some.rs  18-into.expanded.rs  18-into.rs  19-tuple-structs.expanded.rs  19-tuple-structs.rs  20-with-and-without.expanded.rs  20-with-and-without.rs  (+67 more)
tests/ui/: compile_error_in_generated_content.rs  compile_error_in_generated_content.stderr  invalid_config.rs  invalid_config.stderr  invalid_enum_config.rs  invalid_enum_config.stderr  invalid_variant_config.rs  invalid_variant_config.stderr
