[workspace]
members = [".", "docs-gen"]

[package]
name = "fieldwork"
version = "0.4.2"
edition = "2024"
description = "derivable accessors for struct fields"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbr/fieldwork"
readme = "README.md"
keywords = ["macros"]
categories = ["development-tools"]

[features]
debug = []

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }

[dev-dependencies]
macrotest = { version = "1.1.0" }
runtime-macros = { version = "1.1.1" }
rustversion = "1.0.21"
trybuild = "1.0.105"
