[workspace]
members = [".", "fieldwork-derive", "docs-gen"]

[package]
name = "fieldwork"
version = "0.4.6"
edition = "2024"
description = "derivable accessors for struct fields"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbr/fieldwork"
readme = "README.md"
keywords = ["macros"]
categories = ["development-tools"]

[features]
debug = []

[dependencies]
fieldwork-derive = { path = "./fieldwork-derive", version = "0.4.6" }

[dev-dependencies]
macrotest = { version = "1.1.0" }
rustversion = "1.0.21"
trybuild = "1.0.106"
