[package]
name = "docs-gen"
version = "0.1.0"
edition = "2021"
description = "Documentation generation tool for fieldwork"
publish = false

[dependencies]
fieldwork = { path = ".." }
prettyplease = "0.3.0"
quote = "1.0.47"
regex = "1.13.1"
syn = { version = "3.0.0", features = ["full", "extra-traits"] }
