[package]
name = "fieldwork-derive"
version = "0.4.7"
edition = "2024"
description = "Procedural macro implementation for fieldwork"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbr/fieldwork"
readme = "../README.md"
keywords = ["macros"]
categories = ["development-tools"]

[features]
debug = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }

[dev-dependencies]
runtime-macros = { version = "1.1.1" }
