[package]
name = "fieldwork-derive"
version = "0.5.3"
edition = "2024"
description = "Procedural macro implementation for fieldwork"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbr/fieldwork"
readme = "../README.md"
keywords = ["macros"]
categories = ["development-tools"]

[features]
debug = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.107"
quote = "1.0.47"
syn = { version = "3.0.0", features = ["full", "extra-traits"] }

[dev-dependencies]
runtime-macros = { git = "https://github.com/jbr/runtime-macros", branch = "syn-3" }
